--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,19 @@
 			<version>2.2.220</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.2</version>
+		</dependency>
+
+
+
 	</dependencies>
 
 	<build>
